Display text was changed.

--- a/notebooks/01_API.ipynb
+++ b/notebooks/01_API.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "053df71c",
    "metadata": {
     "polyglot_notebook": {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "18d3c28c-b348-40ce-9514-cb28ac3e7d60",
    "metadata": {
     "polyglot_notebook": {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "18b0210f-c959-4211-930d-dd880e6849c0",
    "metadata": {
     "polyglot_notebook": {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "94c72758-73f3-4165-9d1b-fb2804d0cd74",
    "metadata": {
     "polyglot_notebook": {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "2f2a09a6-f3b2-430b-87a0-168409debf2b",
    "metadata": {
     "polyglot_notebook": {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -707,7 +707,7 @@
     {
      "data": {
       "text/plain": [
-       "Average student age: 44"
+       "Average Gryffindor student age is 44"
       ]
      },
      "metadata": {},
@@ -718,13 +718,14 @@
     "using System.Linq;\n",
     "using System.Globalization;\n",
     "\n",
+    "var house = \"Gryffindor\";\n",
     "var avgDate = students\n",
-    "    .Where(s => s.House == \"Gryffindor\" && s.Alive && !string.IsNullOrWhiteSpace(s.DateOfBirth))\n",
+    "    .Where(s => s.House == house && s.Alive && !string.IsNullOrWhiteSpace(s.DateOfBirth))\n",
     "    .Average(s => DateTime.ParseExact(s.DateOfBirth, \"dd-MM-yyyy\", CultureInfo.InvariantCulture).Ticks);\n",
     "\n",
     "var avgDateTime = new DateTime(Convert.ToInt64(avgDate));\n",
     "var avgAge = (int)((DateTime.Now - avgDateTime).TotalDays / 365.25);\n",
-    "$\"Average student age: {avgAge}\".Display();\n"
+    "$\"Average {house} student age is {avgAge}\".Display();\n"
    ]
   }
  ],
