Tree dots added for long outputs.

--- a/notebooks/01_API.ipynb
+++ b/notebooks/01_API.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "053df71c",
    "metadata": {
     "polyglot_notebook": {
@@ -38,7 +38,7 @@
    "outputs": [
     {
      "data": {
-      "application/json": ""
+      "application/json": "[{\"id\":\"9e3f7ce4-b9a7-4244-b709-dae5c1f1d4a8\",\"name\":\"Harry Potter\",\"alternate_names\":[\"The Boy Who Lived\",\"The Chosen One\",\"Undesirable No. 1\",\"Potty\"],\"species\":\"human\",\"gender\":\"male\",\"house\":\"Gryffindor\",\"dateOfBirth\":\"31-07-1980\",\"yearOfBirth\":1980,\"wizard\":true,\"ancestry\":\"half-blood\",\"eyeColour\":\"green\",\"hairColour\":\"black\",\"wand\":{\"wood\":\"holly\",\"core\":\"phoenix tail feather\",\"length\":11},\"patronus\":\"stag\",\"hogwartsStudent\":true,\"hogwartsStaff\":false,\"actor\":\"Daniel Radcliffe\",\"alternate_..."
      },
      "metadata": {},
      "output_type": "display_data"
@@ -52,7 +52,7 @@
     "var http = new HttpClient();\n",
     "var response = await http.GetStringAsync(url);\n",
     "\n",
-    "response[0..500].DisplayAs(\"application/json\");"
+    "display(response[0..500] + \"...\", \"application/json\");"
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "18d3c28c-b348-40ce-9514-cb28ac3e7d60",
    "metadata": {
     "polyglot_notebook": {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "18b0210f-c959-4211-930d-dd880e6849c0",
    "metadata": {
     "polyglot_notebook": {
@@ -119,7 +119,7 @@
    "outputs": [
     {
      "data": {
-      "application/json": ""
+      "application/json": "{\r\n  \"$schema\": \"http://json-schema.org/draft-04/schema#\",\r\n  \"type\": \"array\",\r\n  \"items\": {\r\n    \"$ref\": \"#/definitions/Anonymous\"\r\n  },\r\n  \"definitions\": {\r\n    \"Alternate_name\": {\r\n      \"type\": \"string\"\r\n    },\r\n    \"Wand\": {\r\n      \"type\": \"object\",\r\n      \"properties\": {\r\n        \"wood\": {\r\n          \"type\": \"string\"\r\n        },\r\n        \"core\": {\r\n          \"type\": \"string\"\r\n        },\r\n        \"length\": {}\r\n      }\r\n    },\r\n    \"Anonymous3\": {\r\n      \"type\": \"string\"\r\n    },\r\n    \"Anonym..."
      },
      "metadata": {},
      "output_type": "display_data"
@@ -130,12 +130,12 @@
     "\n",
     "var schema = JsonSchema.FromSampleJson(response);\n",
     "\n",
-    "schema.ToJson()[0..500].DisplayAs(\"application/json\");\n"
+    "display(schema.ToJson()[0..500] + \"...\", \"application/json\");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "94c72758-73f3-4165-9d1b-fb2804d0cd74",
    "metadata": {
     "polyglot_notebook": {
@@ -166,7 +166,7 @@
        "    [System.CodeDom.Compiler.GeneratedCode(\"NJsonSchema\", \"11.3.2.0 (Newtonsoft.Json v13.0.0.0)\")]\n",
        "    public partial class Student\n",
        "    {\n",
-       "        [Newtonsoft.Json.JsonProperty(\"id\", Required = Newton"
+       "        [Newtonsoft.Json.JsonProperty(\"id\", Required = Newton..."
       ]
      },
      "metadata": {},
@@ -186,7 +186,7 @@
     "schema.Definitions[\"Anonymous\"].Title = \"Student\";\n",
     "\n",
     "var file = codeGenerator.GenerateFile();\n",
-    "file[0..500].Display();\n"
+    "display(file[0..500]+ \"...\");\n"
    ]
   },
   {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "2f2a09a6-f3b2-430b-87a0-168409debf2b",
    "metadata": {
     "polyglot_notebook": {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
