New line before three dots.

--- a/notebooks/01_API.ipynb
+++ b/notebooks/01_API.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "053df71c",
    "metadata": {
     "polyglot_notebook": {
@@ -38,7 +38,10 @@
    "outputs": [
     {
      "data": {
-      "application/json": "[{\"id\":\"9e3f7ce4-b9a7-4244-b709-dae5c1f1d4a8\",\"name\":\"Harry Potter\",\"alternate_names\":[\"The Boy Who Lived\",\"The Chosen One\",\"Undesirable No. 1\",\"Potty\"],\"species\":\"human\",\"gender\":\"male\",\"house\":\"Gryffindor\",\"dateOfBirth\":\"31-07-1980\",\"yearOfBirth\":1980,\"wizard\":true,\"ancestry\":\"half-blood\",\"eyeColour\":\"green\",\"hairColour\":\"black\",\"wand\":{\"wood\":\"holly\",\"core\":\"phoenix tail feather\",\"length\":11},\"patronus\":\"stag\",\"hogwartsStudent\":true,\"hogwartsStaff\":false,\"actor\":\"Daniel Radcliffe\",\"alternate_..."
+      "text/plain": [
+       "[{\"id\":\"9e3f7ce4-b9a7-4244-b709-dae5c1f1d4a8\",\"name\":\"Harry Potter\",\"alternate_names\":[\"The Boy Who Lived\",\"The Chosen One\",\"Undesirable No. 1\",\"Potty\"],\"species\":\"human\",\"gender\":\"male\",\"house\":\"Gryffindor\",\"dateOfBirth\":\"31-07-1980\",\"yearOfBirth\":1980,\"wizard\":true,\"ancestry\":\"half-blood\",\"eyeColour\":\"green\",\"hairColour\":\"black\",\"wand\":{\"wood\":\"holly\",\"core\":\"phoenix tail feather\",\"length\":11},\"patronus\":\"stag\",\"hogwartsStudent\":true,\"hogwartsStaff\":false,\"actor\":\"Daniel Radcliffe\",\"alternate_\r\n",
+       "..."
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -52,7 +55,7 @@
     "var http = new HttpClient();\n",
     "var response = await http.GetStringAsync(url);\n",
     "\n",
-    "display(response[0..500] + \"...\", \"application/json\");"
+    "display(response[0..500] + Environment.NewLine + \"...\");"
    ]
   },
   {
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "18d3c28c-b348-40ce-9514-cb28ac3e7d60",
    "metadata": {
     "polyglot_notebook": {
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "18b0210f-c959-4211-930d-dd880e6849c0",
    "metadata": {
     "polyglot_notebook": {
@@ -119,7 +122,35 @@
    "outputs": [
     {
      "data": {
-      "application/json": "{\r\n  \"$schema\": \"http://json-schema.org/draft-04/schema#\",\r\n  \"type\": \"array\",\r\n  \"items\": {\r\n    \"$ref\": \"#/definitions/Anonymous\"\r\n  },\r\n  \"definitions\": {\r\n    \"Alternate_name\": {\r\n      \"type\": \"string\"\r\n    },\r\n    \"Wand\": {\r\n      \"type\": \"object\",\r\n      \"properties\": {\r\n        \"wood\": {\r\n          \"type\": \"string\"\r\n        },\r\n        \"core\": {\r\n          \"type\": \"string\"\r\n        },\r\n        \"length\": {}\r\n      }\r\n    },\r\n    \"Anonymous3\": {\r\n      \"type\": \"string\"\r\n    },\r\n    \"Anonym..."
+      "text/plain": [
+       "{\r\n",
+       "  \"$schema\": \"http://json-schema.org/draft-04/schema#\",\r\n",
+       "  \"type\": \"array\",\r\n",
+       "  \"items\": {\r\n",
+       "    \"$ref\": \"#/definitions/Anonymous\"\r\n",
+       "  },\r\n",
+       "  \"definitions\": {\r\n",
+       "    \"Alternate_name\": {\r\n",
+       "      \"type\": \"string\"\r\n",
+       "    },\r\n",
+       "    \"Wand\": {\r\n",
+       "      \"type\": \"object\",\r\n",
+       "      \"properties\": {\r\n",
+       "        \"wood\": {\r\n",
+       "          \"type\": \"string\"\r\n",
+       "        },\r\n",
+       "        \"core\": {\r\n",
+       "          \"type\": \"string\"\r\n",
+       "        },\r\n",
+       "        \"length\": {}\r\n",
+       "      }\r\n",
+       "    },\r\n",
+       "    \"Anonymous3\": {\r\n",
+       "      \"type\": \"string\"\r\n",
+       "    },\r\n",
+       "    \"Anonym\r\n",
+       "..."
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -130,12 +161,12 @@
     "\n",
     "var schema = JsonSchema.FromSampleJson(response);\n",
     "\n",
-    "display(schema.ToJson()[0..500] + \"...\", \"application/json\");\n"
+    "display(schema.ToJson()[0..500] + Environment.NewLine + \"...\");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "94c72758-73f3-4165-9d1b-fb2804d0cd74",
    "metadata": {
     "polyglot_notebook": {
@@ -166,7 +197,8 @@
        "    [System.CodeDom.Compiler.GeneratedCode(\"NJsonSchema\", \"11.3.2.0 (Newtonsoft.Json v13.0.0.0)\")]\n",
        "    public partial class Student\n",
        "    {\n",
-       "        [Newtonsoft.Json.JsonProperty(\"id\", Required = Newton..."
+       "        [Newtonsoft.Json.JsonProperty(\"id\", Required = Newton\r\n",
+       "..."
       ]
      },
      "metadata": {},
@@ -186,7 +218,7 @@
     "schema.Definitions[\"Anonymous\"].Title = \"Student\";\n",
     "\n",
     "var file = codeGenerator.GenerateFile();\n",
-    "display(file[0..500]+ \"...\");\n"
+    "display(file[0..500] + Environment.NewLine + \"...\");\n"
    ]
   },
   {
@@ -199,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "2f2a09a6-f3b2-430b-87a0-168409debf2b",
    "metadata": {
     "polyglot_notebook": {
@@ -338,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -372,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -441,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
