--- a/notebooks/01_API.ipynb
+++ b/notebooks/01_API.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# 🌐 API calls\n",
     "\n",
+    "[↩️ Back to main page](../README.md)\n",
+    "\n",
     "This notebook fetches data from an API and analyzes the response.\n",
     "\n",
     "We will:\n",
